# lemonade

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Justfile  LICENCE  README.md  meson.build  ml.mdwalters.Lemonade.json  python3-modules.json  rustfmt.toml
data/: meson.build  ml.mdwalters.Lemonade.appdata.xml.in  ml.mdwalters.Lemonade.desktop.in  ml.mdwalters.Lemonade.gschema.xml  ml.mdwalters.Lemonade.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.rs  lemonade.gresource.xml  lemonade.in  main.py  main.rs  meson.build  window.py  window.rs  window.ui
src/api/: README.md  lemmy.rs  mod.rs  types.rs
src/ui/: window.blp
