[package]
name = "lemonade"
version = "2.0.0"
edition = "2021"

[features]
devel = []
flatpak = []

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gio = { version = "0.20.0", features = ["v2_80"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["gnome_46", "v4_12"] }
reqwest = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
